# karakana

./: .gitignore  AGENTS.md  CHANGELOG.md  KARAKANA.md  KARAKANA_AGENT_GUIDE.md  README.md  pyproject.toml
.codex/: hooks.json
docs/: command-reference.md  configuration.md  daily-workflow.md  delivery-artifact-readiness.md  installation.md  protocols.md  release.md  safety.md  skill-promotion-policy.md  skill-vs-tool-policy.md  skillpacks.md  skills.md  troubleshooting.md  workspaces.md
karakana/: __init__.py  __main__.py  cli.py  codex.py  config.py  orchestrator.py  router.py
okf/: index.md
profiles/: stable.yml
prompts/: codex_task.prompt.md  issue_triage.prompt.md  planner.prompt.md  reflection.prompt.md  skill_author.prompt.md
protocols/: architecture-decision.yml  assessment-review.yml  data-migration.yml  memory-update.yml  python-code-change.yml  release-change.yml  requirements-change.yml  safety-policy-change.yml  skill-update.yml  ux-change.yml
skillpacks/: billing.yml  karakana.yml  lims.yml  msc-platform.yml  msc-research.yml  nhrdm.yml
skills/: README.md
tests/: test_action_cli.py  test_action_evals.py  test_action_extractor.py  test_action_handoff.py  test_action_publish.py  test_action_schemas.py  test_action_standards_spec.py  test_action_store.py  test_action_suggested_skills.py  test_action_summary.py  test_action_trace_integration.py  test_agent_guidance_docs.py  test_agent_start.py  test_cli.py  test_codex_cli.py  test_codex_evals.py  test_codex_execution_safety.py  test_codex_executor.py  test_codex_handoff.py  test_config_cli.py  (+175 more)
(+413 files in other folders)
